crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-50040-2.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-50040-2.json",
  "count": 1,
  "first": [
    1,
    1,
    "1 серия SD/FullHD LostFilm",
    "SD/FullHD",
    "LostFilm",
    0
  ],
  "last_number": 1,
  "with_subtitles": 0
}
