crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-50081-0.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-50081-0.json",
  "count": 4,
  "first": [
    1,
    1,
    "1 серия SD/HD Ultradox",
    "SD/HD",
    "Ultradox",
    0
  ],
  "last_number": 4,
  "with_subtitles": 0
}
